update hotsite texts

--- a/src/client/src/app/site/pages/base/base.component.html
+++ b/src/client/src/app/site/pages/base/base.component.html
@@ -59,7 +59,7 @@
         <div class="col-md-4 col-lg-4 footer-contact d-flex align-items-center">
           <span class="fas fa-envelope-open" aria-hidden="true"></span>
           <div>
-            <p>Entre em contato</p>
+            <div>Entre em contato</div>
             <a href="mailto:atlasdaspastagens.lapig@ufg.br">atlasdaspastagens.lapig@ufg.br</a>
           </div>
         </div>
@@ -77,8 +77,7 @@
       <div class="columns">
         <img src="assets/site/images/logos/atlas_partners.png" alt="Atlas das Pastagens"
              title="Atlas das Pastagens Brasileiras"/>
-        <p>© {{ year }} Atlas das Pastagens Brasileiras. Todos os direitos reservados.
-        </p>
+        <div>© {{ year }} Atlas das Pastagens Brasileiras. Todos os direitos reservados.</div>
       </div>
     </div>
   </div>
